# bf-p4c

./: .clang-format  .dockerignore  .gdbinit  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPackOptions.cmake  Dockerfile  Dockerfile.dockerhub  Dockerfile.for_p4i  Dockerfile.jbay  Dockerfile.tofino  Dockerfile.travis  Doxyfile.in  Jenkinsfile  LICENSE  LICENSE.in  LICENSES.txt  Makefile  Makefile.am  README  README.md  ReleaseNotes.md  action_bus.cpp  action_bus.h  action_table.cpp  addconfig.ac  algorithm.h  alloc.h  asm-parse.y  asm-parse.ypp  asm-types.cpp  asm-types.h  backend.cpp  backend.h  bitops.h  bitvec.cpp  bitvec.h  (+94 more)
bf-asm/: .gdbinit  .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile.am  README.md  SYNTAX.md  SYNTAX.yaml  action_bus.cpp  action_bus.h  action_table.cpp  alias_array.h  alloc.h  asm-parse.ypp  asm-types.cpp  asm-types.h  atcam_match.cpp  attached_table.cpp  b2j.cpp  bfas-runner.py  bfas.cpp  bfas.h  bfdis.cpp  bfdumpbin.cpp  bflink  binary_output.h  bitops.h  bootstrap.sh  bson.cpp  bson.h  checked_array.h  config.h.cmake  constants.h  counter.cpp  crash.cpp  data_switchbox.h  deparser.cpp  deparser.h  depositfield.cpp  depositfield.h  (+82 more)
bf-asm/cloudbreak/: CMakeLists.txt  chip.schema  counter.cpp  counter.h  deparser.cpp  gateway.cpp  gateway.h  input_xbar.cpp  input_xbar.h  instruction.cpp  match_table.cpp  meter.cpp  meter.h  parser.cpp  phv.h  salu_inst.cpp  stage.cpp  stateful.cpp  stateful.h  template_objects.yaml
bf-asm/cmake/: BFNUtils.cmake  config.h.cmake  config.h.in
bf-asm/flatrock/: CMakeLists.txt  action_bus.cpp  action_bus.h  action_table.cpp  action_table.h  chip.schema  common.cpp  common.h  counter.cpp  counter.h  deparser.cpp  deparser.h  exact_match.cpp  exact_match.h  gateway.cpp  gateway.h  hash_action.cpp  hash_action.h  hdr.cpp  hdr.h  input_xbar.cpp  input_xbar.h  instruction.cpp  instruction.h  match_table.cpp  meter.cpp  meter.h  parde.cpp  parde.h  parser.cpp  parser.h  phv.cpp  phv.h  pseudo_parser.cpp  pseudo_parser.h  salu_inst.cpp  sram_match.cpp  sram_match.h  stage.cpp  stateful.cpp  (+8 more)
bf-asm/gtest/: asm-types.cpp  deparser.cpp  depositfield.cpp  flatrock-deparser.cpp  flatrock-instruction.cpp  flatrock-metadata-packer.cpp  flatrock-parser.cpp  gateway.cpp  gtestasm.cpp  hashexpr.cpp  instruction.cpp  metadata_packer.cpp  mirror.cpp  parser-test.cpp  register-matcher.cpp  register-matcher.h
bf-asm/jbay/: CMakeLists.txt  Makefile.am  chip.schema  counter.cpp  counter.h  deparser.cpp  gateway.cpp  gateway.h  input_xbar.cpp  input_xbar.h  instruction.cpp  match_table.cpp  meter.cpp  meter.h  parser.cpp  phv.cpp  phv.h  salu_inst.cpp  stage.cpp  stateful.cpp  stateful.h  tables.cpp  template_objects.yaml
bf-asm/simple_test_harness/: jbay_test_harness
bf-asm/test/: CMakeLists.txt  ctxt_json_ignore  ctxt_json_ignore_new  gen_schema.py  jdiff.sh  runtests  test-bfas-bin  update_config.py
bf-asm/tofino/: CMakeLists.txt  Makefile.am  action_table.h  counter.cpp  counter.h  deparser.cpp  exact_match.cpp  exact_match.h  gateway.cpp  gateway.h  input_xbar.cpp  input_xbar.h  instruction.cpp  match_table.cpp  meter.cpp  meter.h  parser.cpp  phv.cpp  phv.h  salu_inst.cpp  sram_match.cpp  stage.cpp  stateful.cpp  stateful.h  tables.cpp  template_objects.yaml  ternary_match.cpp  ternary_match.h
bf-asm/walle/: CMakeLists.txt  chip.py  csr.py  walle.py
bf-p4c/: .gdbinit  CMakeLists.txt  Makefile.am  README.md  asm.cpp  asm.h  backend.cpp  backend.h  bf-p4c-options.cpp  bf-p4c-options.h  check_duplicate.h  device.cpp  device.h  frontend.cpp  frontend.h  midend.cpp  midend.h  p4c-barefoot.cpp  p4c-tofino.cpp  post_midend.cpp  post_midend.h  tofinoOptions.h  version.h  visualization.cpp  visualization.h
bf-p4c/arch/: add_t2na_meta.cpp  add_t2na_meta.h  arch.cpp  arch.h  arch_spec.cpp  arch_spec.h  architecture.h  bridge.cpp  bridge.h  bridge_metadata.cpp  bridge_metadata.h  check_extern_invocation.cpp  check_extern_invocation.h  collect_bridged_fields.cpp  collect_bridged_fields.h  collect_hardware_constrained_fields.cpp  collect_hardware_constrained_fields.h  converters.cpp  converters.h  helpers.cpp  helpers.h  intrinsic_metadata.cpp  intrinsic_metadata.h  jbay_native.cpp  jbay_native.h  jna.cpp  jna.h  native.cpp  native.h  parser_graph.h  phase0.cpp  phase0.h  portable_switch.cpp  portable_switch.h  program_structure.cpp  program_structure.h  psa.cpp  psa.h  psa_converters.cpp  psa_converters.h  (+28 more)
bf-p4c/common/: alias.cpp  alias.h  alloc.h  asm_output.cpp  asm_output.h  autoindent.h  blockmap.h  (+103 more)
p4-tests/: BMV2Tests.cmake  BMV2Xfail.cmake  CMakeLists.txt  CloudbreakErrors.cmake  CloudbreakTests.cmake  CloudbreakXfail.cmake  CodeGenTests.cmake  Customer.cmake  FlatrockTests.cmake  FlatrockXfail.cmake  GlassTests.cmake  JBayErrors.cmake  JBayMustPass.cmake  JBayTests.cmake  JBayXfail.cmake  Makefile-p4c-extension.am  Makefile.am  Makefile_brig.am  P14Tests.cmake  P14Xfail.cmake  P16Tests.cmake  P16Xfail.cmake  README.md  Switch.cmake  SwitchCloudbreak.cmake  SwitchJBay.cmake  TestUtils.cmake  Tofino2Tests.cmake  TofinoErrors.cmake  TofinoMustPass.cmake  TofinoTests.cmake  TofinoXfail.cmake  base_test.py  codegen_runner.sh  configure.ac  dummy.conf  gen_pd_conf.py  glass  jbay.conf  measure_and_report_the_system_load.py  (+12 more)
scripts/: CMakeLists.txt  PostInstall.cmake  bf_p4c_distro.sh  check-git-submodules  docker_entry_point.sh  extract_schema_versions.sh  generate-license.sh  install_boost_static.sh  install_source_release_clean_prereqs.sh  jsonvalidator.py  make_and_install_dynhash.sh  migrate_repo.sh  p4_14-to-p4_16  p4c-gen-bfrt-conf  p4c-gen-conf  p4c-manifest-config  package_p4c_for_tofino.sh  package_sources.sh  pgo_train.sh  ptf_env_setup.sh  ptf_hugepage_setup.sh  report_overlays.py  run-docker  source_release_clean.py  test_p4c_driver.py  travis_test  validate_context_json  validate_depgraph_json  validate_manifest  validate_output.sh  validate_phv_json  validate_power_json  validate_resources_json  validate_source_json
tofino/: Makefile  Makefile.am  chip.schema  template_objects.yaml
(+14607 files in other folders)
